Add JsonPath-based response mappings to support SKOSMOS definitions
Resolves #202